syntax = "proto3";
package management;
import "management/role_scope.proto";

message CreateRoleRequest {
	string tenant_id = 1;
	string display_name = 2;
	string description = 3;
	repeated RoleScope allowed_scopes = 4;
}

message CreateRoleResponse {
	string id = 1;
}
